// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compontent snapshots max date datefield 1`] = `
<div>
  <div
    class="usa-form-group datefield"
  >
    <label
      class="usa-label"
      for="test-9"
      id="test-9-label"
    >
      test-9
    </label>
    <div
      class="usa-hint"
      id="test-9-hint"
    >
      mm/dd/yyyy
    </div>
    <div
      class="usa-date-picker usa-date-picker--initialized"
      data-max-date="2020-05-05"
      data-min-date="0000-01-01"
    >
      <input
        aria-describedby="test-9-hint"
        aria-hidden="true"
        aria-labelledby="test-9-label"
        class="usa-input usa-date-picker__internal-input"
        style="display: none;"
        tabindex="-1"
      />
      <div
        class="usa-date-picker__wrapper"
      >
        <input
          aria-describedby="test-9-hint"
          aria-labelledby="test-9-label"
          class="usa-input usa-date-picker__external-input"
          id="test-9"
          name="test-9"
          type="text"
        />
        
    
        <button
          aria-haspopup="true"
          aria-label="Toggle calendar"
          class="usa-date-picker__button"
          type="button"
        />
        
    
        <div
          aria-modal="true"
          class="usa-date-picker__calendar"
          hidden=""
          role="dialog"
        />
        
    
        <div
          aria-live="polite"
          class="usa-sr-only usa-date-picker__status"
          role="status"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`compontent snapshots min date datefield 1`] = `
<div>
  <div
    class="usa-form-group datefield"
  >
    <label
      class="usa-label"
      for="test-10"
      id="test-10-label"
    >
      test-10
    </label>
    <div
      class="usa-hint"
      id="test-10-hint"
    >
      mm/dd/yyyy
    </div>
    <div
      class="usa-date-picker usa-date-picker--initialized"
      data-max-date="false"
      data-min-date="2020-05-05"
    >
      <input
        aria-describedby="test-10-hint"
        aria-hidden="true"
        aria-labelledby="test-10-label"
        class="usa-input usa-date-picker__internal-input"
        style="display: none;"
        tabindex="-1"
      />
      <div
        class="usa-date-picker__wrapper"
      >
        <input
          aria-describedby="test-10-hint"
          aria-labelledby="test-10-label"
          class="usa-input usa-date-picker__external-input"
          id="test-10"
          name="test-10"
          type="text"
        />
        
    
        <button
          aria-haspopup="true"
          aria-label="Toggle calendar"
          class="usa-date-picker__button"
          type="button"
        />
        
    
        <div
          aria-modal="true"
          class="usa-date-picker__calendar"
          hidden=""
          role="dialog"
        />
        
    
        <div
          aria-live="polite"
          class="usa-sr-only usa-date-picker__status"
          role="status"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`compontent snapshots primary datefield 1`] = `
<div>
  <div
    class="usa-form-group datefield"
  >
    <label
      class="usa-label"
      for="test-8"
      id="test-8-label"
    >
      test-8
    </label>
    <div
      class="usa-hint"
      id="test-8-hint"
    >
      mm/dd/yyyy
    </div>
    <div
      class="usa-date-picker usa-date-picker--initialized"
      data-max-date="false"
      data-min-date="0000-01-01"
    >
      <input
        aria-describedby="test-8-hint"
        aria-hidden="true"
        aria-labelledby="test-8-label"
        class="usa-input usa-date-picker__internal-input"
        style="display: none;"
        tabindex="-1"
      />
      <div
        class="usa-date-picker__wrapper"
      >
        <input
          aria-describedby="test-8-hint"
          aria-labelledby="test-8-label"
          class="usa-input usa-date-picker__external-input"
          id="test-8"
          name="test-8"
          type="text"
        />
        
    
        <button
          aria-haspopup="true"
          aria-label="Toggle calendar"
          class="usa-date-picker__button"
          type="button"
        />
        
    
        <div
          aria-modal="true"
          class="usa-date-picker__calendar"
          hidden=""
          role="dialog"
        />
        
    
        <div
          aria-live="polite"
          class="usa-sr-only usa-date-picker__status"
          role="status"
        />
      </div>
    </div>
  </div>
</div>
`;
